Restructure for Vercel: move app.py to api/ directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "app.py": {
+    "api/app.py": {
       "maxDuration": 30
     }
   },
@@ -10,7 +10,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/app.py"
+      "destination": "/api/app.py"
     }
   ]
 }
